[gd_scene load_steps=27 format=3 uid="uid://6l8r5fy0ymqt"]

[ext_resource type="Script" uid="uid://k3xvlffr17rf" path="res://Scripts/GameCore.gd" id="1_7lihs"]
[ext_resource type="Resource" uid="uid://kakqpi6wi07u" path="res://Scripts/GameData/DefaultGame.tres" id="2_fgofq"]
[ext_resource type="Script" uid="uid://bu7shnqhd7um8" path="res://MapGen/MapGen3D.gd" id="3_2irst"]
[ext_resource type="PackedScene" uid="uid://by5c7g15ljuta" path="res://PlayerScript/static_player.tscn" id="3_bf53h"]
[ext_resource type="Script" uid="uid://d0tlgr0c6w7gq" path="res://MapGen/MapGenZone.gd" id="4_bf53h"]
[ext_resource type="Resource" uid="uid://7prvjngodfs1" path="res://MapGen/ResearchZone.tres" id="5_71axn"]
[ext_resource type="Script" uid="uid://brnmrs6xlpyic" path="res://Scripts/UI.gd" id="6_dahhg"]
[ext_resource type="Texture2D" uid="uid://baspe0tu45lrg" path="res://UI/back_button.png" id="7_fgofq"]
[ext_resource type="Script" uid="uid://h8d12qstq0k3" path="res://Scripts/TaskSystem/GameTaskManager.gd" id="7_wxwew"]
[ext_resource type="FontFile" uid="uid://c5notad62nmgy" path="res://Assets/Fonts/SansNormalcy/Normalcy-v0.1.7.otf" id="9_bf53h"]
[ext_resource type="Theme" uid="uid://1c7qxp1dlx5i" path="res://UITheme.tres" id="10_3so38"]
[ext_resource type="Texture2D" uid="uid://dkgyet63cgaaa" path="res://Assets/HUD/healthbar.png" id="10_71axn"]
[ext_resource type="AudioStream" uid="uid://0gapate5fity" path="res://Sounds/Music/lcz_ambient.ogg" id="11_dahhg"]
[ext_resource type="Script" uid="uid://dxam3jgydqblf" path="res://Scripts/FPSCounter.gd" id="13_acvyw"]
[ext_resource type="PackedScene" uid="uid://cjurcf2sdk1t5" path="res://InventorySystem/InventoryPanel.tscn" id="14_x3xnh"]
[ext_resource type="Texture2D" uid="uid://bsdsboenf6un3" path="res://Assets/HUD/Touch/inventory.png" id="15_8r6kd"]
[ext_resource type="Texture2D" uid="uid://cuc1gixnu6inj" path="res://Assets/HUD/Touch/inventory_click.png" id="16_tfod6"]
[ext_resource type="Texture2D" uid="uid://bru20wcu484vo" path="res://Assets/HUD/Touch/inventory_disabled.png" id="17_rajel"]
[ext_resource type="Texture2D" uid="uid://bl0heaaasxj8g" path="res://Assets/HUD/Touch/call_mtf.png" id="18_rajel"]
[ext_resource type="Texture2D" uid="uid://mmxp8c0wn3eq" path="res://Assets/HUD/Touch/call_mtf_click.png" id="19_vvhu1"]
[ext_resource type="Texture2D" uid="uid://cia0vdqonir34" path="res://Assets/HUD/Touch/call_mtf_disabled.png" id="20_lbihj"]

[sub_resource type="Environment" id="Environment_mvdmi"]
background_mode = 1
ambient_light_source = 2
ambient_light_color = Color(0.404511, 0.404511, 0.404511, 1)
ambient_light_energy = 4.0
glow_enabled = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_71axn"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dahhg"]
bg_color = Color(0.8, 0.8, 0.360784, 0.498039)
border_width_top = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.360784, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x3xnh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3cx6b"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="Game" type="Node3D"]
process_mode = 1
script = ExtResource("1_7lihs")
gamedata = ExtResource("2_fgofq")

[node name="StaticPlayer" parent="." instance=ExtResource("3_bf53h")]

[node name="FacilityGenerator" type="Node3D" parent="."]
script = ExtResource("3_2irst")
rooms = Array[ExtResource("4_bf53h")]([ExtResource("5_71axn")])
large_rooms = true
enable_door_generation = false
better_zone_generation_min_amount = 5

[node name="FoundationTask" type="Node" parent="."]
script = ExtResource("7_wxwew")

[node name="NPCs" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_mvdmi")

[node name="GameOverTimer" type="Timer" parent="."]
wait_time = 180.0
one_shot = true

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_dahhg")

[node name="FPSCounter" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("13_acvyw")

[node name="HealthBar" type="ProgressBar" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.167
anchor_top = 0.947
anchor_right = 0.167
anchor_bottom = 0.947
offset_left = -128.384
offset_top = -5.65601
offset_right = 127.616
offset_bottom = 18.344
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_71axn")
theme_override_styles/fill = SubResource("StyleBoxFlat_dahhg")

[node name="HealthIcon" type="TextureRect" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.031
anchor_top = 0.957
anchor_right = 0.031
anchor_bottom = 0.957
offset_left = -19.712
offset_top = -20.136
offset_right = 20.288
offset_bottom = 19.864
grow_vertical = 0
texture = ExtResource("10_71axn")

[node name="Tasks" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -512.0
offset_bottom = 128.0
grow_horizontal = 0

[node name="TimeToLeft" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.333
anchor_right = 0.333
offset_left = -255.616
offset_right = 256.384
offset_bottom = 64.0
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="PlayingArea" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.988
offset_bottom = -0.223999
theme_override_styles/panel = SubResource("StyleBoxEmpty_x3xnh")

[node name="Back" type="TextureButton" parent="UI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture_normal = ExtResource("7_fgofq")

[node name="Condition" type="Panel" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -384.0
offset_top = -196.0
offset_right = 384.0
offset_bottom = 188.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3cx6b")

[node name="ConditionLabel" type="Label" parent="UI/Condition"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.251
anchor_right = 0.5
anchor_bottom = 0.251
offset_left = -24.0
offset_top = -64.384
offset_right = 24.0
offset_bottom = 64.616
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("9_bf53h")
theme_override_font_sizes/font_size = 128

[node name="ReasonLabel" type="Label" parent="UI/Condition"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.569
anchor_right = 0.5
anchor_bottom = 0.569
offset_left = -320.0
offset_top = -37.496
offset_right = 320.0
offset_bottom = 37.504
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="Button" parent="UI/Condition"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -256.0
offset_top = -96.0
offset_right = 256.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
localize_numeral_system = false
theme = ExtResource("10_3so38")
text = "BACK_TO_MENU"

[node name="Inventory" parent="UI" instance=ExtResource("14_x3xnh")]
visible = false
layout_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -96.0
offset_right = 48.0
grow_horizontal = 2
grow_vertical = 0

[node name="InventoryButton" type="TextureButton" parent="UI/HBoxContainer"]
visible = false
layout_mode = 2
texture_normal = ExtResource("15_8r6kd")
texture_pressed = ExtResource("16_tfod6")
texture_hover = ExtResource("15_8r6kd")
texture_disabled = ExtResource("17_rajel")
texture_focused = ExtResource("15_8r6kd")

[node name="CallMtfButton" type="TextureButton" parent="UI/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("18_rajel")
texture_pressed = ExtResource("19_vvhu1")
texture_hover = ExtResource("18_rajel")
texture_disabled = ExtResource("20_lbihj")
texture_focused = ExtResource("18_rajel")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_dahhg")
autoplay = true

[connection signal="generated" from="FacilityGenerator" to="." method="_on_facility_generator_generated"]
[connection signal="task_done" from="FoundationTask" to="UI" method="_on_foundation_task_task_done"]
[connection signal="timeout" from="GameOverTimer" to="." method="_on_game_over_timer_timeout"]
[connection signal="gui_input" from="UI/PlayingArea" to="UI" method="_on_playing_area_gui_input"]
[connection signal="pressed" from="UI/Back" to="UI" method="_on_back_pressed"]
[connection signal="pressed" from="UI/Condition/Back" to="UI" method="_on_back_pressed"]
[connection signal="pressed" from="UI/HBoxContainer/InventoryButton" to="UI" method="_on_inventory_button_pressed"]
[connection signal="pressed" from="UI/HBoxContainer/CallMtfButton" to="UI" method="_on_call_mtf_button_pressed"]
